--- a/index.html
+++ b/index.html
@@ -5,54 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <title>Fun with Flexbox</title>
 </head>
 <body>
+    <h1>Fun with Flexbox</h1>
     <div class="container">
-        <h1>Fun With Flexbox</h1>
-        <div class="flex-container">
-            <div class="item red">
-                <div class="flex-content">Content</div>
-            </div>
-            <div class="item green">
-                <div class="flex-content">Content</div>
-            </div>
-            <div class="item blue">
-                <div class="flex-content">Content</div>
-            </div>
-        </div>
-        <div class="flex-controls-container">
-            <div class="controls" id="red-controls">
-                <form>
-                    <label for="flex-grow">Flex-Grow</label>
-                    <input type="number" name="flex-grow" id="red-flex-grow">
-                    <label for="flex-shrink">Flex-Shrink</label>
-                    <input type="number" name="flex-shrink" id="red-flex-shrink">
-                    <label for="flex-basis">Flex-Basis</label>
-                    <input type="number" name="flex-basis" id="red-flex-basis">
-                </form>
-            </div>
-            <div class="controls" id="green-controls">
-                <form>
-                    <label for="flex-grow">Flex-Grow</label>
-                    <input type="number" name="flex-grow" id="red-flex-grow">
-                    <label for="flex-shrink">Flex-Shrink</label>
-                    <input type="number" name="flex-shrink" id="red-flex-shrink">
-                    <label for="flex-basis">Flex-Basis</label>
-                    <input type="number" name="flex-basis" id="red-flex-basis">
-                </form>
-            </div>
-            <div class="controls" id="blue-controls">
-                <form>
-                    <label for="flex-grow">Flex-Grow</label>
-                    <input type="number" name="flex-grow" id="red-flex-grow">
-                    <label for="flex-shrink">Flex-Shrink</label>
-                    <input type="number" name="flex-shrink" id="red-flex-shrink">
-                    <label for="flex-basis">Flex-Basis</label>
-                    <input type="number" name="flex-basis" id="red-flex-basis">
-                </form>
-            </div>   
-        </div>
+        <div class="controls-container"></div>
+        <div class="flex-container"></div>
     </div>
     <script src="index.js"></script>
 </body>
