--- a/index.html
+++ b/index.html
@@ -10,8 +10,74 @@
 </head>
 <body>
     <h1>Fun with Flexbox</h1>
+    <button>Add Flex Item</button>
     <div class="container">
-        <div class="controls-container"></div>
+        <div class="controls-container">
+            <h2>Container Controls</h2>
+            <label for="flex-direction">Flex Direction</label>
+            <select name="flex-direction" id="flex-direction">
+                <option value="row">row</option>
+                <option value="column">column</option>
+                <option value="row-reverse">row-reverse</option>
+                <option value="column-reverse">column-reverse</option>
+            </select>
+
+            <label for="flex-wrap">Flex Wrap</label>
+            <select name="flex-wrap" id="flex-wrap">
+                <option value="nowrap">nowrap</option>
+                <option value="wrap">wrap</option>
+                <option value="wrap-reverse">wrap-reverse</option>
+            </select>
+
+            <label for="justify-content">Justify Content</label>
+            <select name="justify-content" id="justify-content">
+                <option value="flex-start">flex-start</option>
+                <option value="flex-end">flex-end</option>
+                <option value="center">center</option>
+                <option value="space-between">space-between</option>
+                <option value="space-around">space-around</option>
+                <option value="space-evenly">space-evenly</option>
+            </select>
+
+            <label for="align-items">Align Items</label>
+            <select name="align-items" id="align-items">
+                <option value="stretch">stretch</option>
+                <option value="flex-start">flex-start</option>
+                <option value="flex-end">flex-end</option>
+                <option value="center">center</option>
+                <option value="baseline">baseline</option>
+            </select>
+
+            <label for="align-content">Align Content</label>
+            <select name="align-content" id="align-content">
+                <option value="flex-start">flex-start</option>
+                <option value="flex-end">flex-end</option>
+                <option value="center">center</option>
+                <option value="stretch">stretch</option>
+                <option value="space-between">space-between</option>
+                <option value="space-around">space-around</option>
+            </select>
+            <h2>Item Defaults</h2>
+            <label for="flex-grow">Flex Grow</label>
+            <input type="number" name="flex-grow" id="flex-grow" value="0">
+            <label for="flex-shrink">Flex Shrink</label>
+            <input type="number" name="flex-shrink" id="flex-shrink" value="1">
+            <label for="flex-basis">Flex Basis</label>
+            <div class="px-div-container">
+                <input type="number" name="flex-basis" id="flex-basis" value="100">
+                <div class="px-div">px</div>
+            </div>
+            <label for="min-width">Min Width</label>
+            <div class="px-div-container">
+                <input type="number" name="min-width" id="min-width" value="100">
+                <div class="px-div">px</div>
+            </div>
+            <label for="min-height">Min Height</label>
+            <div class="px-div-container">
+                <input type="number" name="min-height" id="min-height" value="100">
+                <div class="px-div">px</div>
+            </div>
+        </div>
         <div class="flex-container"></div>
     </div>
     <script src="index.js"></script>
